guestbook/guestbook-tls-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: local-gateway
  namespace: istio-system
  labels:
    app: local-gateway
    version: istio-1.8.1
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https-local
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: local.guestbook.com-credential
    hosts:
    - "local.guestbook.com"
